--- a/Udemy/backend/package.json
+++ b/Udemy/backend/package.json
@@ -2,7 +2,7 @@
   "name": "learning.nodejs",
   "version": "1.0.0",
   "description": "Aprendendo NodeJS pela Udemy",
-  "main": "./dist/index.js",
+  "main": "./dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.9",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.6",
     "typescript": "^3.1.6"
   }
