--- a/Udemy/docker-compose.yml
+++ b/Udemy/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: nginx:1.14.1
     volumes:
       # Site
-      - ./frontend:/usr/share/nginx/html
+      - ./frontend/public:/usr/share/nginx/html
       # Configuração do proxy reverso
       - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports: 
