--- a/Udemy/docker-compose.yml
+++ b/Udemy/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports: 
       - 80:80
-  backend:
-    image: node:10.13.0
-    volumes:
-      - ./backend:/usr/src/app
-    working_dir: /usr/src/app
-    command: node_modules/.bin/nodemon dist/app.js
-    ports:
-      - 3000:3000
+  # backend:
+  #   image: node:10.13.0
+  #   volumes:
+  #     - ./backend:/usr/src/app
+  #   working_dir: /usr/src/app
+  #   command: node_modules/.bin/nodemon dist/app.js
+  #   ports:
+  #     - 3000:3000
