--- a/Udemy/frontend/nginx/default.conf
+++ b/Udemy/frontend/nginx/default.conf
@@ -13,7 +13,7 @@ server {
   }
 
   location /api {
-    proxy_pass http://backend:3000/;
+    proxy_pass http://127.0.0.1:3000/;
     proxy_http_version 1.1;
   }
 }
