--- a/Udemy/backend/package.json
+++ b/Udemy/backend/package.json
@@ -2,7 +2,7 @@
   "name": "learning.nodejs",
   "version": "1.0.0",
   "description": "Aprendendo NodeJS pela Udemy",
-  "main": "./dist/app.js",
+  "main": "./dist/backend/src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
