--- a/Udemy/backend/package.json
+++ b/Udemy/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Heber Teixeira",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.9",
