--- a/Udemy/frontend/package.json
+++ b/Udemy/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/vue": "^2.0.0",
     "@types/vue-router": "^2.0.0",
+    "ts-loader": "^5.3.1",
+    "typescript": "^3.1.6",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.2",
