--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/Udemy\\backend\\dist\\index.js",
+      "program": "${workspaceFolder}/Udemy\\backend\\dist\\backend\\src\\app.js",
       "outFiles": [
         "${workspaceFolder}/**/*.js"
       ]
