--- a/Udemy/frontend/package.json
+++ b/Udemy/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/vue": "^2.0.0",
     "@types/vue-router": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
+    "ts-loader": "^5.3.1",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.2",
