--- a/Udemy/backend/package.json
+++ b/Udemy/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-validator": "^5.3.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.6",
     "typescript": "^3.1.6"
